created user authentication and question REST APIs

--- a/rest_backend/.env
+++ b/rest_backend/.env
@@ -1,4 +1,4 @@
-MONGO_DB_URI=mongodb+srv://educationapp:educationapp@cluster0.chxprrb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_DB_URI=mongodb+srv://vrcorpit:3E6Kk5mPx689dRU7@quizappcluster.ork8p.mongodb.net/quiz_game?retryWrites=true&w=majority&appName=QuizAppCluster
 API_PORT=9000
 WEB_SOCKET_PORT=4000
 JWT_SECRET_KEY=quiz_app_secrets
