--- a/graphql_backend/package.json
+++ b/graphql_backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "websocket_backend",
+  "name": "graphql_backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.10.1",
     "jsonwebtoken": "^9.0.2",
-    "socket.io": "^4.8.1",
-    "uuid": "^11.0.5"
+    "mongoose": "^8.10.1"
   }
 }
