--- a/rest_backend/.env
+++ b/rest_backend/.env
@@ -2,4 +2,4 @@ MONGO_DB_URI=mongodb+srv://vrcorpit:3E6Kk5mPx689dRU7@quizappcluster.ork8p.mongod
 API_PORT=9000
 WEB_SOCKET_PORT=4000
 JWT_SECRET_KEY=quiz_app_secret
-REST_SERVER_HOST=http://localhost:9000
+BACKEND_SERVER_HOST=http://localhost:9000
