--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ rest_backend/node_modules/
 graphql_backend/node_modules/
 websocket_backend/node_modules/
 .DS_Store
+websocket_backend/.env/
+rest_backend/.env/
