--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ rest_backend/node_modules/
 graphql_backend/node_modules/
 websocket_backend/node_modules/
 .DS_Store
-websocket_backend/.env/
-rest_backend/.env/
+websocket_backend/.env
+rest_backend/.env
+graphql_backend/.env
